# packages/shared/src/schemas/entities.ts
@@ -74,8 +74,8 @@ export const EventSchema = z.object({
   summary_en: z.string(),
   content_zh: z.string(),
   content_en: z.string(),
-  cover_file_id: z.string(),
-  cover_cloud_path: z.string(),
+  cover_file_id: z.string().nullable(),
+  cover_cloud_path: z.string().nullable(),
   cover_url: z.string().url(),
   place_id: z.string().optional(),
   address_text: z.string(),
